Fix archive compression constant in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,6 +86,7 @@ jobs:
           python - <<'PY'
           import os
           import shutil
+          import zipfile
           from pathlib import Path
 
           build_dir = Path("_bundle")
@@ -96,7 +97,7 @@ jobs:
               "zip",
               root_dir=str(build_dir),
               base_dir=f"gip-vision-offline-usb-{label}",
-              compression=shutil.ZIP_DEFLATED,
+              compression=zipfile.ZIP_DEFLATED,
           )
           PY
 
