--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,9 +1,8 @@
 fastapi==0.116.1
-uvicorn[standard]==0.35.0
+uvicorn==0.35.0
 python-multipart==0.0.20
 trimesh==4.7.4
 numpy==2.3.2
 pygltflib==1.16.5
 ifcopenshell==0.8.4.post1
 usd-core==25.11
-scipy==1.17.0
