--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -112,18 +112,42 @@ jobs:
           import json
           import os
           import re
-          import sys
+          import time
+          import urllib.error
           import urllib.request
 
           url = "https://api.github.com/repos/astral-sh/python-build-standalone/releases?per_page=30"
-          headers = {"Accept": "application/vnd.github+json"}
+          headers = {
+              "Accept": "application/vnd.github+json",
+              "User-Agent": "gip-vision-offline-usb-release-workflow",
+          }
           token = os.getenv("GH_TOKEN", "")
           if token:
               headers["Authorization"] = f"Bearer {token}"
 
-          req = urllib.request.Request(url, headers=headers)
-          with urllib.request.urlopen(req, timeout=60) as resp:
-              releases = json.load(resp)
+          retryable_http = {429, 500, 502, 503, 504}
+          releases = None
+          delay = 2
+          last_error = None
+          for _ in range(7):
+              try:
+                  req = urllib.request.Request(url, headers=headers)
+                  with urllib.request.urlopen(req, timeout=60) as resp:
+                      releases = json.load(resp)
+                  break
+              except urllib.error.HTTPError as exc:
+                  last_error = exc
+                  if exc.code not in retryable_http:
+                      raise
+              except Exception as exc:
+                  last_error = exc
+              time.sleep(delay)
+              delay = min(delay * 2, 30)
+
+          if releases is None:
+              if last_error is not None:
+                  raise last_error
+              raise RuntimeError("Unable to load python-build-standalone releases list")
 
           pattern = re.compile(r"^cpython-3\.11\..*-aarch64-apple-darwin-install_only(?:_stripped)?\.tar\.gz$")
           for release in releases:
@@ -149,7 +173,12 @@ jobs:
               exit 1
             fi
 
-            curl -fsSL "$PYBS_URL" -o "$ARTIFACT_DIR/python-standalone.tar.gz"
+            curl --fail --silent --show-error --location \
+              --retry 7 \
+              --retry-all-errors \
+              --retry-delay 2 \
+              --retry-max-time 240 \
+              "$PYBS_URL" -o "$ARTIFACT_DIR/python-standalone.tar.gz"
             mkdir -p "$PKG_DIR/config/.offline_python"
             tar -xzf "$ARTIFACT_DIR/python-standalone.tar.gz" -C "$PKG_DIR/config/.offline_python" --strip-components=1
 
