ci: add non-API fallback for python standalone resolver; bump v1.0.4

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,6 +108,8 @@ jobs:
             cp -a start.py start.command "$PKG_DIR/"
             chmod +x "$PKG_DIR/start.command"
 
+            PYBS_URL=""
+            set +e
             PYBS_URL="$("$ENV_PY" - <<'PY'
           import json
           import os
@@ -167,6 +169,40 @@ jobs:
           raise SystemExit(1)
           PY
             )"
+            PYBS_STATUS=$?
+            set -e
+
+            if [ "$PYBS_STATUS" -ne 0 ] || [ -z "${PYBS_URL}" ]; then
+              echo "[offline-bundle] GitHub API resolver failed, trying releases page fallback"
+              RELEASES_HTML="$(curl --fail --silent --show-error --location \
+                --retry 10 \
+                --retry-all-errors \
+                --retry-delay 2 \
+                --retry-max-time 300 \
+                "https://github.com/astral-sh/python-build-standalone/releases/latest")"
+              PYBS_URL="$(printf '%s' "$RELEASES_HTML" | "$ENV_PY" - <<'PY'
+          import re
+          import sys
+
+          html = sys.stdin.read()
+          pattern = re.compile(
+              r'href="([^"]*cpython-3\.11\.[^"]*-aarch64-apple-darwin-install_only(?:_stripped)?\.tar\.gz)"'
+          )
+          matches = pattern.findall(html)
+          if not matches:
+              raise SystemExit(1)
+
+          def score(item: str) -> tuple[int, str]:
+              name = item.rsplit("/", 1)[-1]
+              return (0 if name.endswith("install_only.tar.gz") else 1, name)
+
+          best = sorted(matches, key=score)[0]
+          if best.startswith("/"):
+              best = f"https://github.com{best}"
+          print(best)
+          PY
+              )"
+            fi
 
             if [ -z "${PYBS_URL}" ]; then
               echo "[offline-bundle] Failed to resolve python-build-standalone asset"
