ci: export PACKAGE_NAME for zip step; bump v1.0.5

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,6 +60,7 @@ jobs:
           esac
 
           PACKAGE_NAME="gip-vision-offline-usb-${PACKAGE_OS}-${VERSION_TAG}"
+          export PACKAGE_NAME
           PKG_DIR="${BUILD_DIR}/${PACKAGE_NAME}"
 
           rm -rf "$BUILD_DIR" "$ARTIFACT_DIR" "$VENV_DIR"
