--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,81 +106,16 @@ jobs:
             cp -a start.py start.command "$PKG_DIR/"
             chmod +x "$PKG_DIR/start.command"
 
-            PYBS_URL=""
-            set +e
-            PYBS_URL="$("$ENV_PY" - <<'PY'
-          import json
-          import os
-          import re
-          import time
-          import urllib.error
-          import urllib.request
-
-          url = "https://api.github.com/repos/astral-sh/python-build-standalone/releases?per_page=30"
-          headers = {
-              "Accept": "application/vnd.github+json",
-              "User-Agent": "gip-vision-offline-usb-release-workflow",
-          }
-          token = os.getenv("GH_TOKEN", "")
-          if token:
-              headers["Authorization"] = f"Bearer {token}"
-
-          retryable_http = {429, 500, 502, 503, 504}
-          releases = None
-          delay = 2
-          last_error = None
-          for _ in range(7):
-              try:
-                  req = urllib.request.Request(url, headers=headers)
-                  with urllib.request.urlopen(req, timeout=60) as resp:
-                      releases = json.load(resp)
-                  break
-              except urllib.error.HTTPError as exc:
-                  last_error = exc
-                  if exc.code not in retryable_http:
-                      raise
-              except Exception as exc:
-                  last_error = exc
-              time.sleep(delay)
-              delay = min(delay * 2, 30)
-
-          if releases is None:
-              if last_error is not None:
-                  raise last_error
-              raise RuntimeError("Unable to load python-build-standalone releases list")
-
-          pattern = re.compile(r"^cpython-3\.11\..*-aarch64-apple-darwin-install_only(?:_stripped)?\.tar\.gz$")
-          for release in releases:
-              assets = release.get("assets") or []
-              preferred = sorted(
-                  assets,
-                  key=lambda a: 0
-                  if a.get("name", "").endswith("install_only.tar.gz")
-                  else 1,
-              )
-              for asset in preferred:
-                  name = asset.get("name", "")
-                  if pattern.match(name):
-                      print(asset.get("browser_download_url", ""))
-                      raise SystemExit(0)
-
-          raise SystemExit(1)
-          PY
-            )"
-            PYBS_STATUS=$?
-            set -e
-
-            if [ "$PYBS_STATUS" -ne 0 ] || [ -z "${PYBS_URL}" ]; then
-              echo "[offline-bundle] GitHub API resolver failed, trying releases page fallback"
-              RELEASES_HTML_PATH="$ARTIFACT_DIR/python-standalone-releases-latest.html"
-              curl --fail --silent --show-error --location \
-                --retry 10 \
-                --retry-all-errors \
-                --retry-delay 2 \
-                --retry-max-time 300 \
-                "https://github.com/astral-sh/python-build-standalone/releases/latest" \
-                -o "$RELEASES_HTML_PATH"
-              PYBS_URL="$("$ENV_PY" - "$RELEASES_HTML_PATH" <<'PY'
+            RELEASES_HTML_PATH="$ARTIFACT_DIR/python-standalone-releases-latest.html"
+            curl --fail --silent --show-error --location \
+              --connect-timeout 10 \
+              --max-time 45 \
+              --retry 2 \
+              --retry-all-errors \
+              --retry-delay 2 \
+              "https://github.com/astral-sh/python-build-standalone/releases/latest" \
+              -o "$RELEASES_HTML_PATH"
+            PYBS_URL="$("$ENV_PY" - "$RELEASES_HTML_PATH" <<'PY'
           import re
           import sys
           from pathlib import Path
@@ -203,8 +138,7 @@ jobs:
               best = f"https://github.com{best}"
           print(best)
           PY
-              )"
-            fi
+            )"
 
             if [ -z "${PYBS_URL}" ]; then
               echo "[offline-bundle] Failed to resolve python-build-standalone asset"
